--- a/RemoteAdsSdk/src/main/res/layout/big_native_ad_right_button_layout_2.xml
+++ b/RemoteAdsSdk/src/main/res/layout/big_native_ad_right_button_layout_2.xml
@@ -7,7 +7,7 @@
     <com.facebook.shimmer.ShimmerFrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <com.google.android.gms.ads.nativead.NativeAdView
             android:layout_width="match_parent"
@@ -18,7 +18,6 @@
                 android:id="@+id/nativeView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#F7F7F7"
                 android:orientation="vertical">
 
                 <RelativeLayout
