--- a/RemoteAdsSdk/src/main/res/layout/small_native_ad_button_right_layout_4.xml
+++ b/RemoteAdsSdk/src/main/res/layout/small_native_ad_button_right_layout_4.xml
@@ -8,12 +8,11 @@
         android:id="@+id/shimmerLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <com.google.android.gms.ads.nativead.NativeAdView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#F7F7F7">
+            android:layout_height="wrap_content">
 
             <RelativeLayout
                 android:id="@+id/rlMedia"
