--- a/RemoteAdsSdk/src/main/res/layout/big_native_ad_1.xml
+++ b/RemoteAdsSdk/src/main/res/layout/big_native_ad_1.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <RelativeLayout
-        android:id="@+id/nativeLay"
+        android:id="@+id/nativeContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
