--- a/RemoteAdsSdk/src/main/res/layout/big_native_ad_right_button_layout_2.xml
+++ b/RemoteAdsSdk/src/main/res/layout/big_native_ad_right_button_layout_2.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginHorizontal="@dimen/_8sdp">
+    android:layout_height="wrap_content">
 
     <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmerLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="gone">
