--- a/RemoteAdsSdk/src/main/res/layout/banner_ad_layout.xml
+++ b/RemoteAdsSdk/src/main/res/layout/banner_ad_layout.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginHorizontal="@dimen/_8sdp">
+    android:layout_height="wrap_content">
 
     <com.facebook.shimmer.ShimmerFrameLayout
         android:id="@+id/shimmerLayout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_50sdp"
-        android:layout_alignParentBottom="true"
         android:visibility="gone">
 
         <View
@@ -22,13 +20,11 @@
         android:id="@+id/bannerLay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:visibility="gone" />
 
     <ImageView
         android:id="@+id/crossBannerLay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:visibility="gone" />
 </RelativeLayout>
