--- a/RemoteAdsSdk/src/main/res/layout/small_native_ad_bottom_button_3.xml
+++ b/RemoteAdsSdk/src/main/res/layout/small_native_ad_bottom_button_3.xml
@@ -7,10 +7,9 @@
     android:layout_height="wrap_content">
 
     <LinearLayout
-        android:id="@+id/conAd"
+        android:id="@+id/nativeContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
         android:orientation="vertical">
 
         <LinearLayout
