--- a/RemoteAdsSdk/src/main/res/layout/small_native_ad_bottom_button_layout_3.xml
+++ b/RemoteAdsSdk/src/main/res/layout/small_native_ad_bottom_button_layout_3.xml
@@ -2,10 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginHorizontal="@dimen/_8sdp">
+    android:layout_height="wrap_content">
 
     <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmerLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="gone">
