--- a/RemoteAdsSdk/src/main/res/layout/small_native_ad_button_right_4.xml
+++ b/RemoteAdsSdk/src/main/res/layout/small_native_ad_button_right_4.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <RelativeLayout
-        android:id="@+id/rlMedia"
+        android:id="@+id/nativeContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
