--- a/RemoteAdsSdk/src/main/res/layout/small_native_ad_bottom_button_3.xml
+++ b/RemoteAdsSdk/src/main/res/layout/small_native_ad_bottom_button_3.xml
@@ -15,7 +15,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/_6sdp"
+            android:layout_marginHorizontal="@dimen/_5sdp"
+            android:layout_marginTop="@dimen/_5sdp"
             android:orientation="horizontal">
 
             <androidx.appcompat.widget.AppCompatImageView
@@ -101,8 +102,8 @@
             android:id="@+id/adCallToAction"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/_6sdp"
-            android:layout_marginVertical="@dimen/_6sdp"
+            android:layout_marginHorizontal="@dimen/_5sdp"
+            android:layout_marginVertical="@dimen/_5sdp"
             android:layout_marginTop="5dp"
             android:background="@drawable/shape_ad_button"
             android:fontFamily="@font/poppins_bold"
