--- a/RemoteAdsSdk/src/main/res/layout/cross_promotion_app_open_ad_layout.xml
+++ b/RemoteAdsSdk/src/main/res/layout/cross_promotion_app_open_ad_layout.xml
@@ -21,8 +21,7 @@
             android:layout_centerVertical="true"
             android:layout_marginStart="@dimen/_10sdp"
             android:adjustViewBounds="true"
-            android:padding="@dimen/_5sdp"
-            android:src="@mipmap/ic_launcher" />
+            android:padding="@dimen/_5sdp" />
 
         <TextView
             android:id="@+id/textAdName"
