--- a/RemoteAdsSdk/src/main/res/layout/cross_promotion_interstitial_ad.xml
+++ b/RemoteAdsSdk/src/main/res/layout/cross_promotion_interstitial_ad.xml
@@ -38,7 +38,7 @@
                 android:layout_marginTop="@dimen/_16sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:adjustViewBounds="true"
-                android:src="@drawable/ic_close" />
+                android:src="@drawable/ic_ad_close" />
         </RelativeLayout>
     </RelativeLayout>
 
