--- a/RemoteAdsSdk/src/main/res/layout/cross_promotion_interstitial_ad.xml
+++ b/RemoteAdsSdk/src/main/res/layout/cross_promotion_interstitial_ad.xml
@@ -26,7 +26,7 @@
                 android:includeFontPadding="false"
                 android:paddingVertical="@dimen/_2sdp"
                 android:text="Test Ad"
-                android:textColor="@color/white"
+                android:textColor="#FFFFFF"
                 android:textSize="@dimen/_10ssp" />
 
             <ImageView
